python-minimock (1.2.3-1) UNRELEASED; urgency=low

  * New upstream version.
    + Can now suppress tracking for a Mock instance by specifying
      ‘tracker=None’.
  * debian/control, debian/rules:
    + Use nicer override handling from later ‘debhelper’ version.

 --

python-minimock (1.2.2-1) unstable; urgency=low

  * New upstream version.
    + Refined tracker output checking for irrelevant whitespace
      differences.
    + Documentation structure update.
  * debian/*:
    + Update copyright on Debian packaging.
  * debian/control:
    + ‘Build-Depends: python’ instead of ‘python-dev-all’.
  * debian/rules:
    + Install upstream changelog.

 -- Ben Finney <ben+debian@benfinney.id.au>  Thu, 26 Mar 2009 14:09:17 +1100

python-minimock (1.2.1-1) unstable; urgency=low

  * New upstream version.
    + ‘mock’ now also searches built-in namespace by default.
    + New mock trackers.
  * debian/control:
    + Conform package to ‘Standards-Version: 3.8.1’.

 -- Ben Finney <ben+debian@benfinney.id.au>  Fri, 20 Mar 2009 22:49:57 +1100

python-minimock (1.0-1) unstable; urgency=low

  * New upstream version.
  * debian/copyright:
    + Update fields to latest draft format version.
    + Wrap 'Format-Specification' field to observe line-length limit.

 -- Ben Finney <ben+debian@benfinney.id.au>  Fri, 09 Jan 2009 19:59:36 +1100

python-minimock (0.9-1) unstable; urgency=low

  * New upstream version.
  * debian/copyright
    + Update fields to latest draft format version.

 -- Ben Finney <ben+debian@benfinney.id.au>  Mon, 21 Jul 2008 08:34:38 +1000

python-minimock (0.8-5) unstable; urgency=medium

  * debian/rules
    + Fix a FTBFS: Ensure package builds on the buildd environment, by not
      mentioning 'python-support' at all (closes: bug#490315).
  * debian/control
    + Build-Depends-Indep: python-central >= 0.6.8, debhelper >= 7.0.14 to
      correctly manipulate the 'dh' sequences.

 -- Ben Finney <ben+debian@benfinney.id.au>  Sat, 12 Jul 2008 10:44:05 +1000
