@@ -5,16 +5,15 @@ Section: python
 Homepage: http://pypi.python.org/pypi/MiniMock
 VCS-bzr: http://bzr.debian.org/collab-maint/python-minimock/
 Build-Depends: debhelper (>= 7.0.50),
-    python-central (>= 0.6.8),
+    python-support (>= 0.90),
     python-setuptools,
     python
 Standards-Version: 3.8.1
-XS-Python-Version: all
 
 Package: python-minimock
 Architecture: all
 Depends: ${misc:Depends}, ${python:Depends}
-XB-Python-Version: ${python:Versions}
+Provides: ${python:Provides}
 Description: simple library for Python mock objects
  minimock is a simple Python library for using mock objects.
  .
